--- a/public/assignment1.html
+++ b/public/assignment1.html
@@ -71,4 +71,4 @@ Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
 Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
 penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 Cras mattis consectetur purus sit amet fermentum. Praesent commodo
-cursus magna, vel scelerisque nisl consectetur et.</p></div></div></div><div class="container-fluid"><div class="row-fluid"><div class="span9 offset1"><hr><div class="row-fluid"><div class="span4 offset4"><footer><span>&copy; 2012 Douglas Edmonson</span></footer></div></div><hr></div></div></div><script src="http://code.jquery.com/jquery-1.8.3.min.js"></script><script src="./js/bootstrap.js"></script><script src="./js/site.js"></script></body></html>
+cursus magna, vel scelerisque nisl consectetur et.</p></div></div></div><div class="container-fluid"><div class="row-fluid"><div class="span9 offset1"><hr><footer class="text-center">&copy; 2012 Douglas Edmonson &lt;<a href="#">djedmonson@gmail.com</a>&gt;</footer><hr></div></div></div><script src="http://code.jquery.com/jquery-1.8.3.min.js"></script><script src="./js/bootstrap.js"></script><script src="./js/site.js"></script></body></html>
