--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,8 @@
-<!DOCTYPE html><html><head><title>DJ's Personal Site</title><link rel="icon" type="image/png" href="http://dev.dedmonson.com/favicon.png"><link rel="stylesheet" href="./stylesheets/bootstrap.css"><link rel="stylesheet" href="./stylesheets/style.css"></head><body><div class="navbar navbar-fixed-top"><div class="navbar-inner"><div class="container-fluid"><a data-toggle="collapse" data-target=".nav-responsive-collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a><a href="./" class="brand">dedmons</a><div class="nav-collapse navbar-responsive-collapse collapse"><ul class="nav"><li class="active"><a href="./index.html">Home</a></li><li class="dropdown "><a href="#" data-toggle="dropdown" class="dropdown-toggle">Assignments<b class="caret"></b></a><ul class="dropdown-menu"><li class=""><a href="./assignment1.html">Assignment 1</a></li><li class=""><a href="#" class="pna">Assignment 2</a></li></ul></li><li class=""><a href="#" class="pna">About</a></li><li class=""><a href="#" class="pna">Contact</a></li></ul></div></div></div></div><div class="container-fluid"><div id="pageNotAvalible" style="display: none" class="row-fluid"><div class="span4 offset4"><div class="alert alert-block alert-error fade in text-center"><button type="button" class="alert-close-btn close">&times;</button><h4>Hold On!</h4><span>That page is not avalible yet.</span></div></div></div><div class="row-fluid"><div class="span6 offset3"><div class="alert fade in text-center"><strong>Warning</strong><span>:  This page is under heavy construction, little content is complete.</span></div></div></div></div><div class="container-fluid"><div class="hero-unit"><h1>Welcome</h1><p>This site is for Clemsons CPSC X81 Android Development Course</p></div><div class="row-fluid"><div class="span3"><div class="well sidebar-nav-affix-top"><ul class="nav nav-list"><li class="nav-header">List Header 1</li><li class="active"><a href="#part1">Part 1</a></li><li><a href="#part2">Part 2</a></li></ul></div></div><div class="span9"><div id="part1" class="in-page-link"></div><h3>Part1</h3><p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
-tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
-Donec id elit non mi porta gravida at eget metus. Integer posuere erat
-a ante venenatis dapibus posuere velit aliquet.</p><p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-Vestibulum id ligula porta felis euismod semper. Sed posuere
-consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
-vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
-lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
-commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
-amet risus.</p><p>Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit
-amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus
-auctor fringilla. Maecenas faucibus mollis interdum. Maecenas faucibus
-mollis interdum. Donec sed odio dui.</p><p>Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.
-Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
-penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-Cras mattis consectetur purus sit amet fermentum. Praesent commodo
-cursus magna, vel scelerisque nisl consectetur et.</p><p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
-tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
-Donec id elit non mi porta gravida at eget metus. Integer posuere erat
-a ante venenatis dapibus posuere velit aliquet.</p><p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-Vestibulum id ligula porta felis euismod semper. Sed posuere
-consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
-vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
-lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
-commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
-amet risus.</p><p>Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit
-amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus
-auctor fringilla. Maecenas faucibus mollis interdum. Maecenas faucibus
-mollis interdum. Donec sed odio dui.</p><p>Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.
-Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
-penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-Cras mattis consectetur purus sit amet fermentum. Praesent commodo
-cursus magna, vel scelerisque nisl consectetur et.p
-Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
-tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
-Donec id elit non mi porta gravida at eget metus. Integer posuere erat
-a ante venenatis dapibus posuere velit aliquet.</p><div id="part2" class="in-page-link"></div><h3>Part 2</h3><p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+<!DOCTYPE html><html><head><title>DJ's Personal Site</title><link rel="icon" type="image/png" href="http://dev.dedmonson.com/favicon.png"><link rel="stylesheet" href="./stylesheets/bootstrap.css"><link rel="stylesheet" href="./stylesheets/style.css"></head><body><div class="navbar navbar-fixed-top"><div class="navbar-inner"><div class="container-fluid"><a data-toggle="collapse" data-target=".nav-responsive-collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a><a href="./" class="brand">dedmons</a><div class="nav-collapse navbar-responsive-collapse collapse"><ul class="nav"><li class="active"><a href="./index.html">Home</a></li><li class="dropdown "><a href="#" data-toggle="dropdown" class="dropdown-toggle">Assignments<b class="caret"></b></a><ul class="dropdown-menu"><li class=""><a href="./assignment0.html">Assignment 0</a></li><li class=""><a href="./assignment1.html">Assignment 1</a></li><li class=""><a href="#" class="pna">Assignment 2</a></li></ul></li><li class=""><a href="#" class="pna">About</a></li><li class=""><a href="#" class="pna">Contact</a></li></ul></div></div></div></div><div class="container-fluid"><div id="pageNotAvalible" style="display: none" class="row-fluid"><div class="span4 offset4"><div class="alert alert-block alert-error fade in text-center"><button type="button" class="alert-close-btn close">&times;</button><h4>Hold On!</h4><span>That page is not avalible yet.</span></div></div></div><div class="row-fluid"><div class="span6 offset3"><div class="alert fade in text-center"><strong>Warning</strong><span>:  This page is under heavy construction, little content is complete.</span></div></div></div></div><div class="container-fluid"><div class="row-fluid"><div class="span10 offset1"><div class="hero-unit"><h1>Welcome</h1><p>This site is for Clemson's CPSC X81 Android Development Course</p></div></div></div><div class="row-fluid"><div class="span2 offset1"><div class="well sidebar-nav-affix-top"><ul class="nav nav-list"><li><a href="#ref">Reference Links</a></li><li><a href="#part2">Part 2</a></li></ul></div></div><div class="span8"><div id="ref" class="in-page-link"></div><h3>Reference Links</h3><h4>Google Mobile Courses - <a href="http://goo.gl/F4HR2" target="_blank">Link</a></h4><p>Google provides a set of courses, tutorials, and videos on android
+development. Each resource has a brief description that identifies
+the topics covered in the resource.</p><h4>How to use Android Graphical Layout Tool - <a href="http://goo.gl/dpZu4" target="_blank">Link</a></h4><p>This page goes into detail about the graphical tool used to
+build layouts in eclipse. Gives examples for creating, editing,
+and modifying the layout with both the WYSIWYG view and the XML view.</p><div id="part2" class="in-page-link"></div><h3>Part 2</h3><p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
 Vestibulum id ligula porta felis euismod semper. Sed posuere
 consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
 vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
